app/assets/stylesheets/customjane.css
#med-logo {
  padding: 15px;
}

.navbar-default .navbar-nav > li > a {
  color: #ffffff;
  font-size:150%;
}

.top-padded {
  margin-top: 90px;
  /*padding-top: 40px;*/
}

.deco-bar {
  position: relative;
  min-height: 20px;
  /*margin-bottom: 55px;*/
  border: 1px solid transparent;
  background-color: #b2d271;
  background-image:url('wallpapersmall.png');
  background-repeat:repeat;
}

.flash_errors {
  position:absolute;
  top:50px;
}

.participant_container {
  margin-top: 55px;
}

